# spicydeckIIDX

./: .gitignore  .markdownlint.json  CMakeLists.txt  README.md  sdkconfig  spicydeckIIDX.ino
assets/: font.inc  font.json  font.sft
iop/: .clangd  CMakeLists.txt  README.md
iop/cmake/: rom.ld  setup.cmake  toolchain.cmake
iop/src/ch32v003/: csr.h  registers.h  regstructs.h
iop/src/libc/: crt0.c  crt0.s  misc.c  setjmp.h  setjmp.s  stdio.h  string.c
iop/src/main/: defs.hpp  i2c.cpp  i2c.hpp  input.cpp  input.hpp  main.cpp  vectors.s
iop/src/main/util/: bitfield.hpp  hardware.cpp  hardware.hpp  templates.hpp
schema/: font.json
src/main/: CMakeLists.txt  audiotask.cpp  audiotask.hpp  defs.hpp  iotask.cpp  iotask.hpp  main.cpp  sst.cpp  sst.hpp  taskbase.cpp  taskbase.hpp  uitask.cpp  uitask.hpp
src/main/drivers/: audio.cpp  audio.hpp  display.cpp  display.hpp  displaydefs.hpp  input.cpp  input.hpp  inputdefs.hpp  motor.cpp  motor.hpp  storage.cpp  storage.hpp
src/main/dsp/: adpcm.cpp  adpcm.hpp  dsp.cpp  dsp.hpp
src/main/renderer/: font.cpp  font.hpp  renderer.cpp  renderer.hpp
src/main/tasks/: audiotask.cpp  audiotask.hpp  iotask.cpp  iotask.hpp  streamtask.cpp  streamtask.hpp  uitask.cpp  uitask.hpp
src/main/util/: hash.cpp  hash.hpp  rtos.cpp  rtos.hpp  string.cpp  string.hpp  templates.hpp
tools/: adpcm.pxd  audio.py  convertFont.py  dsp.pxd  encodeSST.py  keyfinder.pxd  native.pyx  requirements.txt  rubberband.pxd  util.py
